@@ -11,9 +11,9 @@
 
     <p><b>D</b>eployment <b>An</b>d <b>C</b>onfiguration <b>E</b>ngine
     <b>(DAnCE)</b> is an implementation of the run-time infrastructure as
-    defined by the recently adopted OMG <a
-    href="http://www.omg.org/cgi-bin/doc?ptc/2003-07-02">Deployment &amp;
-    Configuration (D&amp;C)</a> specification, which deals with the
+    defined by the final adopted <a
+    href="http://www.omg.org/cgi-bin/doc?ptc/2003-07-08">OMG Deployment &amp;
+    Configuration (D&amp;C) specification (ptc/2003-07-08)</a>, which deals with the
     configuration and deployment of component-based applications. Currently
     DAnCE only supports the deployment &amp; configuration of CORBA
     Component Model (CCM)-based applications, though we are interested in
